[gd_scene load_steps=4 format=3 uid="uid://cqxyjrd5ehma8"]

[ext_resource type="Script" path="res://scripts/debug_viewer.gd" id="1_ll1kf"]
[ext_resource type="FontFile" uid="uid://50pgbui3omif" path="res://assets/fonts/Jersey_25/Jersey25-Regular.ttf" id="2_sfgqo"]
[ext_resource type="PackedScene" uid="uid://oitco668lkwj" path="res://scenes/agent.tscn" id="3_t1s3w"]

[node name="Node3D" type="Node3D"]
script = ExtResource("1_ll1kf")

[node name="DebugCamera" type="Camera3D" parent="."]
transform = Transform3D(0.480224, -0.846861, 0.228501, 0, 0.260505, 0.965473, -0.877146, -0.463643, 0.1251, 0.969, 3.016, 0.634)

[node name="DebugValues" type="VBoxContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 89.0
grow_horizontal = 2

[node name="DuringGame" type="HBoxContainer" parent="DebugValues"]
layout_mode = 2
alignment = 1

[node name="StateLabel" type="Label" parent="DebugValues/DuringGame"]
layout_mode = 2

[node name="StateScroll" type="HScrollBar" parent="DebugValues/DuringGame"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EyeLabel" type="Label" parent="DebugValues/DuringGame"]
layout_mode = 2
text = "EYES"

[node name="EyeScroll" type="HScrollBar" parent="DebugValues/DuringGame"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EarLabel" type="Label" parent="DebugValues/DuringGame"]
layout_mode = 2
text = "EARS"

[node name="EarScroll" type="HScrollBar" parent="DebugValues/DuringGame"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HeadLabel" type="Label" parent="DebugValues/DuringGame"]
layout_mode = 2
text = "HEAD ROTATION"

[node name="HeadScroll" type="HScrollBar" parent="DebugValues/DuringGame"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GameSetup" type="HBoxContainer" parent="DebugValues"]
layout_mode = 2
alignment = 1

[node name="EyeLabel" type="Label" parent="DebugValues/GameSetup"]
layout_mode = 2
text = "EYES"

[node name="EyeLengthScroll" type="HScrollBar" parent="DebugValues/GameSetup"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EyeAcrossScroll" type="HScrollBar" parent="DebugValues/GameSetup"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EarLabel" type="Label" parent="DebugValues/GameSetup"]
layout_mode = 2
text = "EARS"

[node name="EarScroll" type="HScrollBar" parent="DebugValues/GameSetup"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CameraLabel" type="Label" parent="DebugValues"]
layout_mode = 2
text = "Camera Position"
horizontal_alignment = 1

[node name="CameraScroll" type="HScrollBar" parent="DebugValues"]
layout_mode = 2
max_value = 1.0

[node name="DebugLabel3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.24062, 0)
billboard = 1
font = ExtResource("2_sfgqo")
font_size = 64
outline_size = 11

[node name="Agent" parent="." instance=ExtResource("3_t1s3w")]
